--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -16,8 +16,8 @@ main:
   - name: News
     url: /#news
     weight: 13
-  - name: Experience
-    url: experience/
+  - name: Essential CV
+    url: essential_cv/
     weight: 20
   - name: Projects
     url: projects/
