--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
 #    url: /#papers
 #    weight: 11
   - name: Travels
-    url: /#travels_upcoming
+    url: /#travels
     weight: 14
 #  - name: News
 #    url: /#news
