--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -5,6 +5,7 @@
 
 # Website name
 title: Hugo Academic CV Theme
+<meta name="google-site-verification" content="kEPM3yJVBxP9zsnRCpvxKgoBMKQyzDHiIrkqL8kIXJM" />
 # Website URL
 baseURL: 'https://example.com/'
 
