--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,9 +5,9 @@
 
 # Appearance
 appearance:
-  mode: system
+  mode: dark
   color: emerald
-  theme_default: light
+  theme_default: dark
 
 # SEO
 marketing:
